--- a/location_app/templates/location_app/location.html
+++ b/location_app/templates/location_app/location.html
@@ -1,6 +1,8 @@
+{% load static %}
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
 {{ form.media }}
+<script type="text/javascript" src="{% static 'js/location.js' %}"></script>
 
 <style>
 #map{
@@ -65,3 +67,7 @@ input{
 		
 	</div>
 </div>
+
+<script type="text/javascript">
+google.maps.event.addDomListener(window, 'load', initAutocomplete); // Function that will be called when the window first loads
+</script>
